# uni

industrial programming/: AwardCostApp.java  LibraryApp.java  SortingVisualizer.java  lab3.java  lab4.java  lab5_2.java  lab6.java  lab7.java
industrial programming/lab2/: task20.java  task34.java  task6.java
industrial programming/lab3/: lab3.java
industrial programming/lab4/: lab4.java
industrial programming/site/: API.md  CHECKLIST.md  QUICKSTART.md  README.md  pom.xml
industrial programming/site/src/main/resources/: script_1.py
industrial programming/site/src/main/resources/data/: users.xml
industrial programming/site/src/main/resources/templates/: thread-monitor.html
industrial programming/site/src/main/resourses/: application.properties
industrial programming/site/src/main/resourses/data/: library.xml
industrial programming/site/src/main/resourses/temlates/: librarian-dashboard.html  login.html  reader-dashboard.html  register.html
operating systems/kollok1/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  test.cpp
operating systems/lab1/: CMakeLists.txt  Main.java  creator.cpp  main.cpp
operating systems/lab1/src/: CMakeLists.txt  main.cpp  reporter.cpp
operating systems/lab1/tests/: CMakeLists.txt  test_integration.cpp
operating systems/lab2/: CMakeLists.txt  main.cpp  test.cpp
operating systems/lab3/: CMakeLists.txt  main.cpp  marker_thread.cpp  marker_thread.h  tests.cpp
operating systems/lab3 Catch2 boost.mutex + boost.lock_guard/: CMakeLists.txt  main.cpp  marker_thread.cc  marker_thread.h  tests_catch2.cpp
operating systems/lab4/: CMakeLists.txt  main.cpp  marker_thread.cpp  marker_thread.h  sender.cpp  tests.cpp
operating systems/lab4 semaphores + boost.tests/: CMakeLists.txt  main.cpp  marker_thread.cpp  marker_thread.h  receiver.c  sender.c  sender.cpp  tests.cpp
operating systems/lab5/: CMakeLists.txt  client.cpp  common.h  lock_manager.h  server.cpp  tests_lock_manager.cpp
operating systems/lab5 boost/: CMakeLists.txt  Client.cpp  LockManager.h  Server.cpp  protocol.h
operating systems/lab5 boost/tests/: LockManagerTests.cpp
operating systems/todo list api/: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml  prometheus.yml
operating systems/todo list api/events-worker/: Dockerfile  pom.xml
operating systems/todo list api/events-worker/src/main/java/com/example/worker/: EventsWorkerApplication.java
operating systems/todo list api/events-worker/src/main/java/com/example/worker/config/: RabbitListenerConfig.java
operating systems/todo list api/events-worker/src/main/java/com/example/worker/messaging/: TaskEvent.java  TaskEventsListener.java
operating systems/todo list api/events-worker/src/main/resources/: application.yml
operating systems/todo list api/gateway/: Dockerfile  pom.xml
operating systems/todo list api/gateway/src/main/java/com/example/gateway/: ApiKeyResolverConfig.java
operating systems/todo list api/gateway/src/main/java/com/example/gateway/controller/: FallbackController.java
operating systems/todo list api/gateway/src/main/resources/: application.yml
operating systems/todo list api/grafana/dashboards/: todo.json
operating systems/todo list api/grafana/provisioning/datasources/: datasource.yml
operating systems/todo list api/src/main/java/com/example/todo/controller/: TaskController.java
operating systems/todo list api/src/main/java/com/example/todo/dto/: CreateTaskRequest.java  UpdateTaskRequest.java
operating systems/todo list api/src/main/java/com/example/todo/exception/: ErrorResponse.java  GlobalExceptionHandler.java
operating systems/todo list api/src/main/java/com/example/todo/model/: Task.java
operating systems/todo list api/src/main/java/com/example/todo/repository/: TaskRepository.java
operating systems/todo list api/src/main/java/com/example/todo/service/: TaskService.java
operating systems/todo list api/src/main/java/com/example/todo/util/: TaskMapper.java
operating systems/todo list api/src/main/resources/: application-docker.yml  application.yml
operating systems/todo list api/src/main/resources/db/migration/: V1__Initial_schema.sql
operating systems/todo list api/todo-api/: Dockerfile  pom.xml
operating systems/todo list api/todo-api/src/main/java/com/example/todo/: TodoApplication.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/config/: CacheConfig.java  RabbitConfig.java  RabbitJsonConfig.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/controller/: TaskController.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/dto/: CreateTaskRequest.java  TaskDTO.java  UpdateTaskRequest.java  UpdateTaskStatusRequest.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/exception/: GlobalExceptionHandler.java  ResourceNotFoundException.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/messaging/: TaskEvent.java  TaskEventPublisher.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/model/: Task.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/repository/: TaskRepository.java
operating systems/todo list api/todo-api/src/main/java/com/example/todo/service/: TaskService.java
operating systems/todo list api/todo-api/src/main/resources/: application-docker.yml  application.yml
operating systems/todo list api/todo-api/src/test/java/com/example/todo/controller/: TaskControllerTest.java
